--- a/wordle/css/style.css
+++ b/wordle/css/style.css
@@ -21,3 +21,22 @@ body {
 .puc{
     background-color: red;
 }
+
+span {
+    font-size: 50px;
+}
+
+.red {
+    background-color: red;
+    color: aliceblue;
+}
+
+.green {
+    background-color: green;
+    color: aliceblue;
+}
+
+.gray {
+    background-color: gray;
+    color: aliceblue;
+}
